# quimms

./: protoc_example
channel-service/: app_config.json  go.mod  go.sum  main.go
channel-service/internal/config/: config.go
channel-service/internal/handler/: handler.go  health-check.go  router.go
channel-service/internal/repo/: init.go  (+2 more)
channel-service/pb/: channel_service.pb.go  channel_service_grpc.pb.go
conncetor/: Cargo.toml  app_config.json  build.rs
conncetor/src/: cache.rs  config.rs  consist_hash.rs  consistent_hash.rs  handler.rs  http.rs  lib.rs  main.rs  message.rs  model.rs  registry.rs  rpc.rs  service.rs  state.rs  transfer.rs  upstream.rs
conncetor/src/handler/: connect.rs  health.rs  result.rs
conncetor/src/registry/: model.rs  store.rs  upstream.rs
conncetor/src/rpc/: dispatch.rs
conncetor/src/service/: api_service.rs  channel.rs  connect.rs  health.rs  message.rs  result.rs  user.rs
conncetor/src/transfer/: recv.rs
dispatcher/: .env  app_config.json  go.mod  go.sum  main.go
dispatcher/pb/: channel_service_grpc.pb.go  dispatch_service.pb.go  dispatch_service_grpc.pb.go  dispatcher.pb.go  dispatcher_grpc.pb.go
message-service/: app_config.json  go.mod  go.sum  main.go
message-service/internal/: server.go
message-service/pb/: message_service.pb.go  message_service_grpc.pb.go
proto/: channel_service.proto  dispatch_service.proto  dispatched.proto  dispatcher.proto  message_service.proto  user_service.proto
user-service/: app_config.json  go.mod  go.sum  main.go
user-service/pb/: user_service.pb.go  user_service_grpc.pb.go
(+50 files in other folders)
